--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
+  border-radius: 8px;
   border: 2px solid black; /* Add a black border */
   margin: 10px;
   box-sizing: border-box;
@@ -134,6 +135,8 @@ body {
 
 .social-links a {
   margin-right: 10px;
+  font-size: 25px; /* Adjust the size as needed */
+  
 }
 
 .back-to-top {
@@ -176,7 +179,7 @@ body {
 }
 
 .footer a {
-  font-size: 24px; /* Adjust the size as needed */
+  font-size: 25px; /* Adjust the size as needed */
   margin: 0 10px;
 }
 
