--- a/src/App.css
+++ b/src/App.css
@@ -201,6 +201,7 @@ p {
   background-color: #028afa;/* Use your primary color */
   color: white;
   padding: 10px 20px;
+  margin-bottom: 5px;
   text-decoration: none;
   border-radius: 20px;
   
